test/langtools/tools/javac/lambda/methodReference/MethodRefToInnerWithoutOuter.out
MethodRefToInnerWithoutOuter.java:22:31: compiler.err.invalid.mref: kindname.constructor, (compiler.misc.cant.access.inner.cls.constr: TestString, java.lang.String, MethodRefToInnerBase)
1 error
